--- a/manual.env.example
+++ b/manual.env.example
@@ -50,6 +50,7 @@ PP_CACHED_ACCS=90,95,98,99,100
 DISALLOWED_NAMES=mrekk,vaxei,btmc,cookiezi
 DISALLOWED_PASSWORDS=password,abc123
 DISALLOW_OLD_CLIENTS=True
+KEY_BASED_LOGIN=True
 
 DISCORD_AUDIT_LOG_WEBHOOK=
 DISCORD_BANCHO_UPDATES_WEBHOOK=
