--- a/manual.env.example
+++ b/manual.env.example
@@ -44,6 +44,7 @@ DEBUG=False
 # redirect beatmaps, beatmapsets, and forum
 # pages of maps to the official osu! website
 REDIRECT_OSU_URLS=True
+DISABLE_INGAME_REGISTRATION=True
 
 PP_CACHED_ACCS=90,95,98,99,100
 
